--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@
     <div data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" class="scrollspy-example"
         tabindex="0">
         <div class="bg-dark-blue p-5" id="about">
-            <h1 class="heading-l pb-3">About Us</h1>
             <div class="container">
                 <div class="row">
+                    <div class="col-12 pb-3">
+                        <h1 class="heading-l pb-3">About Us</h1>
+                    </div>
                     <div class="col-sm-4 pb-3">
-                        <img src="restaurant.jpg" class="img-fluid" />
+                        <img src="restaurant.jpg" class="img-fluid" alt="Restaurant Interior" />
                     </div>
                     <div class="col-sm-8">Cheng Du Taste is a Chinese restaurant in Providence, RI. Lorem ipsum dolor
                         sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -74,12 +76,14 @@
             </div>
         </div>
         <div class="p-5" id="gallery">
-            <h1 class="heading-l pb-3">Gallery</h1>
             <div class="container">
                 <div class="row">
+                    <div class="col-12 pb-3">
+                        <h1 class="heading-gallery pb-3">Gallery</h1>
+                    </div>
                     <div class="col-6 col-sm-4 pb-4">
                         <div class="img-container">
-                            <img src="1_dumpling.jpg" class="img-fluid" />
+                            <img src="1_dumpling.jpg" class="img-fluid" alt="Chive Dumplings"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
                                 <h5 class="text-center">Chive Dumplings</h5>
                             </div>
@@ -87,7 +91,7 @@
                     </div>
                     <div class="col-6 col-sm-4 pb-4">
                         <div class="img-container">
-                            <img src="2.jpg" class="img-fluid" />
+                            <img src="2.jpg" class="img-fluid" alt="Pork Belly"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
                                 <h5 class="text-center">Pork Belly</h5>
                             </div>
@@ -95,7 +99,7 @@
                     </div>
                     <div class="col-6 col-sm-4 pb-4">
                         <div class="img-container">
-                            <img src="3.jpg" class="img-fluid" />
+                            <img src="3.jpg" class="img-fluid" alt="BBQ Pork"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
                                 <h5 class="text-center">BBQ Pork</h5>
                             </div>
@@ -103,7 +107,7 @@
                     </div>
                     <div class="col-6 col-sm-4 pb-4">
                         <div class="img-container">
-                            <img src="4.jpg" class="img-fluid" />
+                            <img src="4.jpg" class="img-fluid" alt="Noodle Bowl"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
                                 <h5 class="text-center">Noodle Bowl</h5>
                             </div>
@@ -111,7 +115,7 @@
                     </div>
                     <div class="col-6 col-sm-4 pb-4">
                         <div class="img-container">
-                            <img src="5.jpg" class="img-fluid" />
+                            <img src="5.jpg" class="img-fluid" alt="Braised Pork"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
                                 <h5 class="text-center">Braised Pork</h5>
                             </div>
@@ -119,7 +123,7 @@
                     </div>
                     <div class="col-6 col-sm-4 pb-4">
                         <div class="img-container">
-                            <img src="6.jpg" class="img-fluid" />
+                            <img src="6.jpg" class="img-fluid" alt="Sesame Chicken"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
                                 <h5 class="text-center">Sesame Chicken</h5>
                             </div>
@@ -127,13 +131,13 @@
                     </div>
                     <div class="col-6 col-sm-4 pb-4">
                         <div class="img-container">
-                            <img src="7.jpg" class="img-fluid" />
+                            <img src="7.jpg" class="img-fluid" alt="Beef and Onions"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
                                 <h5 class="text-center">Beef and Onions</h5>
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-sm-4 pb-4">
+                    <div class="col-6 col-sm-4 pb-4" alt="Noodle Bowl">
                         <div class="img-container">
                             <img src="8.jpg" class="img-fluid" />
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
@@ -143,7 +147,7 @@
                     </div>
                     <div class="col-6 col-sm-4 pb-4">
                         <div class="img-container">
-                            <img src="9.jpg" class="img-fluid" />
+                            <img src="9.jpg" class="img-fluid" alt="Orange Chicken"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
                                 <h5 class="text-center">Orange Chicken</h5>
                             </div>
@@ -159,7 +163,7 @@
                     <h1 class="heading-l">Visit Us</h1>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-6 pb-3">
                         <div class="pt-3">495 Smith St</div>
                         <div>Providence, RI 02908</div>
 
