--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                     <div class="col-sm-4 pb-3">
                         <img src="restaurant.jpg" class="img-fluid" alt="Restaurant Interior" />
                     </div>
-                    <div class="col-sm-8">Cheng Du Taste is a Chinese restaurant in Providence, RI. Lorem ipsum dolor
+                    <p class="col-sm-8">Cheng Du Taste is a Chinese restaurant in Providence, RI. Lorem ipsum dolor
                         sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                         magna. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat.</div>
+                        commodo consequat.</p>
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
                     <div class="col-12 pb-3">
                         <h1 class="heading-gallery pb-3">Gallery</h1>
                     </div>
-                    <div class="col-6 col-sm-4 pb-4">
+                    <div class="col-6 col-lg-4 pb-4">
                         <div class="img-container">
                             <img src="1_dumpling.jpg" class="img-fluid" alt="Chive Dumplings"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-sm-4 pb-4">
+                    <div class="col-6 col-lg-4 pb-4">
                         <div class="img-container">
                             <img src="2.jpg" class="img-fluid" alt="Pork Belly"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-sm-4 pb-4">
+                    <div class="col-6 col-lg-4 pb-4">
                         <div class="img-container">
                             <img src="3.jpg" class="img-fluid" alt="BBQ Pork"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
@@ -105,7 +105,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-sm-4 pb-4">
+                    <div class="col-6 col-lg-4 pb-4">
                         <div class="img-container">
                             <img src="4.jpg" class="img-fluid" alt="Noodle Bowl"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-sm-4 pb-4">
+                    <div class="col-6 col-lg-4 pb-4">
                         <div class="img-container">
                             <img src="5.jpg" class="img-fluid" alt="Braised Pork"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
@@ -121,7 +121,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-sm-4 pb-4">
+                    <div class="col-6 col-lg-4 pb-4">
                         <div class="img-container">
                             <img src="6.jpg" class="img-fluid" alt="Sesame Chicken"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
@@ -129,7 +129,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-sm-4 pb-4">
+                    <div class="col-6 col-lg-4 pb-4">
                         <div class="img-container">
                             <img src="7.jpg" class="img-fluid" alt="Beef and Onions"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
@@ -137,7 +137,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-sm-4 pb-4" alt="Noodle Bowl">
+                    <div class="col-6 col-lg-4 pb-4" alt="Noodle Bowl">
                         <div class="img-container">
                             <img src="8.jpg" class="img-fluid" />
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
@@ -145,7 +145,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-sm-4 pb-4">
+                    <div class="col-6 col-lg-4 pb-4">
                         <div class="img-container">
                             <img src="9.jpg" class="img-fluid" alt="Orange Chicken"/>
                             <div class="image-overlay d-flex flex-column justify-content-center text-center h-100">
@@ -176,7 +176,7 @@
                         <div class="ratio ratio-4x3">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19307.14896043974!2d-71.43493252400866!3d41.83542634264118!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e445a1f0e088f7%3A0x24ab5e14c8dbdb73!2sChengdu%20Taste!5e0!3m2!1sen!2sus!4v1665510361292!5m2!1sen!2sus"
-                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
