--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
 <body>
     <div class="bg-image d-flex justify-content-center"
         style="background-image: url('splashimage.jpg'); height: 100vh; background-size: cover;">
-        <div class="mask text-light d-flex justify-content-center flex-column text-center px-5 h-100"
+        <div class="mask text-light d-flex justify-content-center flex-column text-center px-5 h-100""
             style="background-color: rgba(255,255,255, 0.5)">
-            <div class="px-5">
-                <h1 class="splash-heading p-3"><strong>Cheng Du Taste</strong></h1>
-                <button type="button" class="btn btn-danger order-button mb-3">ORDER ONLINE</button>
-                <div class="p-3 body-xl"><strong>📞 401-729-5699</strong></div>
-                <div class="body-xl"><strong>495 Smith St</strong></div>
-                <div class="body-xl"><strong>Providence, RI 02908</strong></div>
+            <div class="px-lg-5">
+                <div class="px-5">
+                    <h1 class="splash-heading p-3"><strong>Cheng Du Taste</strong></h1>
+                    <button type="button" class="btn btn-danger order-button mb-3">
+                        ORDER ONLINE
+                    </button>
+                    <div class="p-3 body-xl"><strong>📞 401-729-5699</strong></div>
+                    <div class="body-xl"><strong>495 Smith St</strong></div>
+                    <div class="body-xl"><strong>Providence, RI 02908</strong></div>
+                </div>
             </div>
         </div>
-        <nav id="navbar" class="navbar navbar-expand-lg p-3 navbar-dark fixed-top">
+        <nav id="navbar" class="navbar navbar-expand-lg p-2 py-lg-3 px-lg-5 navbar-dark fixed-top">
             <a class="navbar-brand text-white" href="#">
                 <h2><strong>Cheng Du Taste</strong></h2>
             </a>
@@ -81,6 +85,7 @@
                     <div class="col-12 pb-3">
                         <h1 class="heading-gallery pb-3">Gallery</h1>
                     </div>
+                    <!-- Images used in accordance to the Unsplash License -->
                     <div class="col-6 col-lg-4 pb-4">
                         <div class="img-container">
                             <img src="1_dumpling.jpg" class="img-fluid" alt="Chive Dumplings"/>
